<resources>
    <string name="app_name">FlappyBird</string>
    <string name="bt_start">Start Game</string>
    <string name="bt_setting">Settings</string>
    <string name="setting">Setting</string>
    <string name="user_name">user</string>
    <string name="speed">speed</string>
    <string name="volume">volume</string>
    <string name="clear_rank_data">clear rank data</string>
    <string name="ranking_list">Ranking List</string>
    <string name="no_items_available">No Items Available</string>
    <string name="resume_game">resume game</string>
    <string name="score">score</string>
    <string name="time">spendtime</string>
    <string name="gameover">Game Over</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="restart_game">Would you like to RESTART?</string>
    <string name="second">seconds</string>
    <string name="bt_version">version info</string>
    <string name="empty_user_toast">username is empty,use the default username \'temp\'</string>
    <string name="clear_data_toast">data has already cleared</string>
    <string name="check_update">check for update</string>
    <string name="version_info">Version Info</string>
    <string name="current_version">Current Version:</string>
    <string name="remote_version">Remote Version:</string>
    <string name="remote_version_text">please click to get remote version</string>
    <string name="get_update">Download</string>
    <string name="update_found">update found</string>
    <string name="update_not_found">update not found</string>
    <string name="network_error">network error!</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
</resources>
