<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/version_info"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/current_version"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_current_version"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center_horizontal"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/remote_version"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_remote_version"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/remote_version_text"
                android:gravity="center_horizontal"
                android:layout_height="match_parent"/>
        </LinearLayout>



        <Button
            android:id="@+id/bt_check_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border_line_white"
            android:text="@string/check_update" />
        <Button
            android:id="@+id/bt_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_line_grey"
            android:text="@string/get_update"
            android:textAllCaps="false"
            android:clickable="false" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb_check_update"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</FrameLayout>