<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_background">

    <ImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_title" />

    <LinearLayout
        android:id="@+id/activity_starting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <!-- The two buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/bt_setting"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:onClick="showSettingsDialog"
                android:scaleType="fitXY"
                android:src="@drawable/ic_setting"
                android:text="@string/bt_setting" />

            <Button
                android:id="@+id/bt_resume_game"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="200dp"
                android:background="@drawable/border_line_while"
                android:text="@string/resume_game"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:visibility="invisible" />

            <Button
                android:layout_marginTop="8dp"
                android:id="@+id/bt_start_game"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/border_line_while"
                android:onClick="goToGameActivity"
                android:text="@string/bt_start"
                android:textAllCaps="false"
                android:textSize="30sp" />


        </LinearLayout>
    </LinearLayout>
    <!-- The FloatingActionButton to adjust the threshold of the voice -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_ranklist"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:onClick="showRankingListDialog"
        android:src="@drawable/ic_volume_24dp" />
</RelativeLayout>
